--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,36 +6,21 @@
     android:layout_height="match_parent"
     android:background="@android:color/holo_blue_light"
     android:orientation="vertical"
-    android:background="@android:color/holo_blue_light"
     android:padding="10dp"
     tools:context=".ProfileActivity">
 
-<<<<<<< HEAD
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/logo"
         />
-=======
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/logo" />
->>>>>>> main
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="4dp"
         android:textColor="@color/white"
-<<<<<<< HEAD
-        android:text="Welcome to Gamer Connect! Please Login!"
-=======
-        android:text="Welcome to Gamer Connect!"
-        android:layout_gravity="center"
->>>>>>> main
-        />
+        android:text="Welcome to Gamer Connect! Please Login!"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -49,7 +34,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-<<<<<<< HEAD
         android:orientation="horizontal">
 
         <TextView
@@ -87,10 +71,6 @@
             android:inputType="textPassword"
             android:background="@android:drawable/dialog_holo_light_frame"
             />
-=======
-        android:orientation="vertical"
-        android:gravity="center"
-        android:paddingEnd="40dp">
 
         <EditText
             android:id="@+id/userEmail"
@@ -114,21 +94,15 @@
             android:singleLine="true"
             android:layout_gravity="center"
             android:inputType="textPassword" />
->>>>>>> main
 
         <Button
             android:id="@+id/showHideBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-<<<<<<< HEAD
             android:text="Show"
             android:background="@android:drawable/dialog_holo_light_frame"
             android:labelFor="@id/user_Password"/>
-=======
-            android:text="Show password"
-            android:textSize="10dp"
-            android:layout_gravity="left"/>
->>>>>>> main
+
     </LinearLayout>
 
 
@@ -140,30 +114,20 @@
         >
 
         <Button
-            android:id="@+id/loginBtn"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-<<<<<<< HEAD
             android:text="Login"
             android:id="@+id/login_button"
             android:background="@android:drawable/dialog_holo_light_frame"
             />
-=======
-            android:text="Login" />
 
->>>>>>> main
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Create Account"
-<<<<<<< HEAD
             android:id="@+id/create_button"
-            android:background="@android:drawable/dialog_holo_light_frame"
-=======
-            android:id="@+id/createButton"
->>>>>>> main
-            />
+            android:background="@android:drawable/dialog_holo_light_frame"/>
 
     </LinearLayout>
 
