--- a/app/src/main/res/layout/activity_page_home.xml
+++ b/app/src/main/res/layout/activity_page_home.xml
@@ -11,18 +11,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="vertical">
+
+        <include layout="@layout/toolbar" />
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/recyclerView"/>
+            android:id="@+id/recyclerView"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Main Page"/>
+
 
     </LinearLayout>
 
