--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Toolbar
+<androidx.appcompat.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,19 +9,14 @@
     android:layout_height="wrap_content"
     android:background="#FFFFFF">
 
-
-    <ImageView
+    <androidx.appcompat.widget.SearchView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/baseline_menu_18" />
-
-    <SearchView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp"
         android:id="@+id/search_bar"
-        app:queryHint="search"
+        app:defaultQueryHint="search"
         app:iconifiedByDefault="false"
+        app:theme="@style/Theme.AppCompat.Light.DarkActionBar"
         />
 
-</Toolbar>
+</androidx.appcompat.widget.Toolbar>
